Closed
Bug 328141
Opened 19 years ago
Closed 19 years ago
MathML <mtable>s sometimes have incorrect scriptlevel
Categories
(Core :: MathML, defect)
Core
MathML
Tracking
()
RESOLVED
FIXED
People
(Reporter: dmharvey, Assigned: rbs)
References
Details
Attachments
(1 file)
1.08 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en) AppleWebKit/417.9 (KHTML, like Gecko) Safari/417.8
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1
In some situations <mtable> elements have the wrong scriptlevel. Typical example:
<munder>
<mi>x</mi>
<mtable>
<mtr>
<mtd>
<mi>y</mi>
</mtd>
</mtr>
</mtable>
</munder>
In this case the "y" should appear smaller than the "x", but Firefox draws them the same size. According to my reading of the MathMl 2.0 spec, the <mtable> should have scriptlevel equal to the default for the second argument to <munder>, which should be one more than the scriptlevel of "x".
This kind of construct is useful for things like AMS-LaTeX's \substack. Of course it's possible to get around this by using an extra <mstyle>, but it shouldn't be necessary.
Reproducible: Always
Steps to Reproduce:
1. View a page with the above MathML.
Actual Results:
The "x" and "y" are the same size.
Expected Results:
The "y" should be smaller than the "x".
Updated•19 years ago
|
Assignee: nobody → rbs
Component: General → MathML
Product: Firefox → Core
QA Contact: general → ian
Version: unspecified → 1.8 Branch
Confirming. I understand what is going. It comes from the fact that <mtable> has some wrapper frames. The fix will be a one-liner.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: 1.8 Branch → Trunk
Attachment #235803 -
Flags: superreview?(roc)
Attachment #235803 -
Flags: review?(roc)
Attachment #235803 -
Flags: superreview?(roc)
Attachment #235803 -
Flags: superreview+
Attachment #235803 -
Flags: review?(roc)
Attachment #235803 -
Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•11 years ago
|
See Also: → https://github.com/gvanas/blahtexml/issues/4
You need to log in
before you can comment on or make changes to this bug.
Description
•