MathML <mtable>s sometimes have incorrect scriptlevel, b=328141, r+sr=roc